修复图可视化的问题